k8s/applications/tautulli/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: tautulli
          image: tautulli/tautulli:v2.16.1
          ports:
            - name: ingress
              containerPort: 8181
          volumeMounts:
            - name: tautulli
              mountPath: /config
      volumes:
        - name: tautulli
          persistentVolumeClaim:
            claimName: tautulli
      resources:
        limits:
          memory: 256Mi
        requests:
          cpu: 10m
          memory: 256Mi
