k8s/applications/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli-lb
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.83
spec:
  type: LoadBalancer
  selector:
    app: tautulli
  ports:
    - name: ingress
      port: 80
      targetPort: ingress
